# invoicegen_backend

./: .gitignore  FLUTTER_INTEGRATION_GUIDE.md  GRAPHQL_COMPLETE.md  GRAPHQL_IMPLEMENTATION_GUIDE.md  GRAPHQL_SETUP.md  README.md  SEEDER_README.md  WAITLIST_IMPLEMENTATION_SUMMARY.md  create_tables.py  create_test_user.py  create_verification_table.py  create_waitlist_table.py  fix_context.py  main.py  otp_log.txt  pyproject.toml  requirements.txt  reset_db.py  seed_database.py  test_auth_graphql.py  test_category_graphql.py  test_complete_user_flow.py  test_db.py  test_email_service.py  test_graphql_http.py  test_graphql_schema.py  test_imports.py  test_neon.py  test_product_graphql.py  test_user_query.py  test_waitlist_graphql.py
app/: main.py
app/alembic/: alembic.ini
app/alembic/versions/: 001_initial.py  __init__.py
app/api/v1/: __init__.py
app/auth/: __init__.py  router.py  schemas.py  utils.py
app/core/: __init__.py  config.py  deps.py  lifespan_events.py
app/db/: __init__.py  base.py  database.py  redis_client.py
app/db/models/: __init__.py  address.py  audit_log.py  billing.py  business.py  categories.py  client.py  (+11 more)
app/graphql/: README.md  __init__.py  context.py  examples.md  schema.py
app/invoices/: __init__.py  models.py  router.py  schemas.py
app/routers/: __init__.py  router.py
app/services/: README.md  __init__.py  billing_service.py  email_config.py  email_examples.py  email_service.py
app/utils/: email.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT.md
scripts/: README.md  config_manager.py  setup.bat  setup.sh  setup_database.py
(+41 files in other folders)
